# winsentry

./: .gitignore  Cargo.toml  README.md
WinSentry/config/: Config.toml
WinSentry/log/: log-2026-06-14_13-58-05.txt  log-2026-06-14_15-07-55.txt
src/: configuration.rs  logger.rs  main.rs
src/modules/: debloater_watcher.rs  mod.rs  safe_queue.rs  shortcut_manager.rs  taskbar_refresh.rs
