[package]
name = "WinSentry"
version = "0.1.0"
edition = "2024"

[dependencies]
win-hotkeys = "0.5.1"
notify = "6"
is_elevated = "0.1.2"
winapi = { version = "0.3.5", features = ["wincon"] }
chrono = "0.4.45"
sysinfo = "0.30"
windows-sys = { version = "0.52", features = [
    "Win32_UI_Shell", 
    "Win32_UI_WindowsAndMessaging", 
    "Win32_System_Threading", 
    "Win32_Foundation"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "2.0.0"
